--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "node-backend",
+  "name": "RepoCoinTest",
   "version": "1.0.0",
-  "description": "node backend",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.bundle.js",
-    "build": "webpack",
-    "dev": "nodemon ./server.js localhost 3080"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnisurK24/RepoCoinTest.git"
   },
   "author": "Anisur Khan",
   "license": "ISC",
+  "homepage": "https://github.com/AnisurK24/RepoCoinTest/blob/master/README.md",
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
@@ -18,6 +26,7 @@
     "https": "^1.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "concurrently": "^4.1.2",
     "mongoose": "^5.7.1",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.12.0",
@@ -29,11 +38,6 @@
   "devDependencies": {
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
-    "gulp": "^4.0.2",
-    "gulp-zip": "^5.0.1",
-    "nodemon": "^2.0.4",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-stream": "^5.2.1"
+    "nodemon": "^2.0.4"
   }
 }
