--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "author": "Anisur Khan",
   "license": "ISC",
-  "homepage": "https://github.com/AnisurK24/RepoCoinTest/blob/master/README.md",
+  "homepage": "https://github.com/AnisurK24/RepoCoinTest#readme",
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
